[package]
name = "flosion"
version = "0.1.0"
authors = ["timstr <straubinger.tim@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: read about profiles and optimization settings
# https://doc.rust-lang.org/cargo/reference/profiles.html

[dependencies]
atomic_float = "0.1.0"
atomicslice = "0.1.0"
base64 = "0.13.0"
cpal = "0.13.3"
eframe = "0.27.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
parking_lot = "0.11.2"
rand = "0.8.3"
rfd = "0.10.0"
seahash = "4.1.0"
send_wrapper = "0.6.0"
serialization = { git = "https://github.com/timstr/serialization", branch = "main" }
slicemath = "0.1.0"
spin_sleep = "1.0.0"
spmcq = "0.1.0"
symphonia = { version = "0.5.3", features = ["all"] }
thread-priority = "0.4.1"
