[package]
name = "flosion"
version = "0.1.0"
authors = ["timstr <straubinger.tim@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: read about profiles and optimization settings
# https://doc.rust-lang.org/cargo/reference/profiles.html

[dependencies]
atomic_float = "0.1.0"
atomicslice = "0.1.0"
base64 = "0.13.0"
cpal = "0.13.3"
# NOTE: using own fork of egui to fix pointer position zoom bug,
# see https://github.com/emilk/egui/issues/5379
# eframe = "0.29.1"
eframe = { git = "https://github.com/timstr/egui", rev = "4e4c5d63" }
flosion-macros = { path = "../flosion-macros" }
hashstash = "0.2.0"
inkwell = { version = "0.5.0", features = ["llvm15-0"] }
parking_lot = "0.11.2"
rand = "0.8.3"
rfd = "0.10.0"
send_wrapper = "0.6.0"
# chive = "0.1.0"
slicemath = "0.1.0"
spin_sleep = "1.0.0"
spmcq = "0.1.0"
symphonia = { version = "0.5.3", features = ["all"] }
thread-priority = "0.4.1"
